2023/01/04 reducer 개념 추가 정리 및 go 함수 생성 및 정리

--- a/2.map,filter,reduce.md
+++ b/2.map,filter,reduce.md
@@ -94,13 +94,14 @@ console.log(result) // [{ name: 'robot', price: 3000 },{ name: 'lego', price: 20
 const numbers = [1,2,3,3,4]
 
 const reduce  = (func, acc, iterable) => {
+
+  // acc가 없을 경우, 매개 변수의 자리수가 앞으로 밀려 iterable 인자에 iterable이  없는 상태가 되므로 아래와 같은 조건식 성립 가능
   if(!iterable) {
-    iterable = acc[Symbol.iterator]();
-    acc = iterable.next().value;
+    iterable = acc[Symbol.iterator](); // iterable 지정
+    acc = iterable.next().value; // 초기 acc를 이터러블의 가장 맨 앞 요소로 지정, next() 실행을 통해 아래 for of 문에서의 순회는 두번째 요소부터 시작됨
   }
   
   for(const element of iterable) {
-    console.log(element)
     acc = func(acc, element)   
   }
   return acc
