2023/01/13 take 함수 정리

--- a/4.range,take.md
+++ b/4.range,take.md
@@ -1,4 +1,6 @@
-## range
+## range, take, 지연평가
+
+### range
 
 ``` javascript
 // range
@@ -35,3 +37,26 @@ console.log(lazyList) // Object [Generator] {}
 console.log(reduce(add, lazyList)) // 10
 
 ```
+
+### take
+
+``` javascript
+const take = (limit, iter) => {
+  const result = [];
+  for (const a of iter) {
+    result.push(a)
+    if(result.length === limit) {
+      return result
+    }
+  }
+}
+
+console.time("")
+console.log(take(4,range(10000000)))  // [0, 1, 2, 3], array => iterator => 순회
+console.timeEnd("") // : 90.5419921875 ms
+console.time("")
+console.log(take(4,L.range(10000000))) // [0, 1, 2, 3], 제네레이터를 활용하여 필요한 값만 꺼내어 순회
+console.timeEnd("") // 0.14208984375 ms
+```
+
+- 주어진 배열에서 limit만큼의 요소를 구하는 `take`를 통해 성능 비교를 하게 되면, `L.range`의 성능이 더 좋음을 알 수 있다.
