2023/01/24 지연평가 과정 정리

--- a/5.L.map,L.filter.md
+++ b/5.L.map,L.filter.md
@@ -1,4 +1,4 @@
-## 5.L.map,L.filter, 중첩사용
+## 5.map, filter 지연평가
 
 ### L.map
 
@@ -31,3 +31,57 @@ const filterResult = L.filter((res => res > 5),[1,9,2,5,4,10]);
 const filterSpreadResult = [...filterResult]
 console.log(filterSpreadResult) // [9, 10]
 ```
+
+### 지연 평가의 순서
+
+``` javascript
+const take = curry((limit, iter) => {
+  const result = [];
+
+  for (const a of iter) {
+    result.push(a)
+    if(result.length === limit) {
+      return result
+    }
+  }
+})
+
+
+L.range = function*(length) {
+  let i = -1;
+  while(++i < length){
+    yield i;
+  }
+};
+
+L.map = curry(function*(f,iter){
+  for(const a of iter) {
+    yield f(a)
+  } 
+})
+
+L.filter = curry(function*(f, iter) {
+  for(const a of iter) if(f(a)) yield a
+})
+
+const lazyResult = go(
+  L.range(10), 
+  L.map(x => x * 2), 
+  L.filter(x => x > 4), 
+  take(4))
+console.log([...lazyResult]) // [6, 8, 10, 12]
+
+```
+
+### 지연 평가의 순서
+
+1. `L.range`, `L.map`, `L.filter`는, 제네레이터로서, 이터레이터 생성 후 평가를 지연한다.(`for...of`문 내부에서 `next()`를 하기 전까지 내부 로직 실행 X)
+2. `take` 함수가 실행되면서 `L.filter`에 값 하나를 요청, `L.filter`는 `L.map`에게 값 하나를 요청, `L.map`은 `L.range`에게 값 하나를 요청 (`take` -> `L.filter` -> `L.map` -> `L.range` ) 순으로 평가
+3. `range`에서 0 생성, `map`으로 전달, `map`에서 `2`를 곱한 후 `filter`로 전달, `filter` 평가 후 `take`로 전달
+4. 위와 같은 과정이, `take`에 전달된 4라는 `length`가 충족이 될 때까지 반복
+
+### map. filter 함수가 가지는 결합법칙
+
+- 사용하는 데이터가 무엇이든지, 사용하는 함수가 순수함수라면 다음과 같은 결합 법칙이 성립한다. 즉, 값을 가로로 평가했을때의 결과값과 세로로 평가를 했을때의 결과값은 같다.
+
+`[[mapping, mapping], [filtering, filtering], [mapping, mapping]]` = `[[mapping, filtering, mapping], [mapping, filtering, mapping]]`
