--- a/basic/6.reduce,take,find.md
+++ b/basic/6.reduce,take,find.md
@@ -30,3 +30,31 @@ getQueryString_ver3({limit: 10, offset: 10, type: "male"})
 ```
 
 - `join`의 경우, `reduce` 를 통해 축약하는 함수이므로 조합성이 높으며 이터러블 프로토콜을 따르고 있기 때문에, 제네레이터를 통해 `join`에 도달하기 전까지 지연평가가 가능하다.
+
+## find
+
+``` typescript
+// 일반 평가
+const find = (f, iter) => go(
+  iter,
+  newFilter(f),
+  take(1),
+  ([a]) => a
+)
+
+const users = [{age: 32}, {age: 30}, {age: 28}, {age: 15}, {age: 31}];
+
+console.log(find((a) => {return a.age > 30},users)) // { age: 32 }
+
+// 지연 평가
+const find = (f, iter) => go(
+  iter,
+  L.filter(f),
+  take(1),
+  ([a]) => a
+)
+
+const users = [{age: 32}, {age: 30}, {age: 28}, {age: 15}, {age: 31}];
+
+console.log(find((a) => {return a.age > 30},users)) // { age: 32 }
+```
